--- a/templates/default.html
+++ b/templates/default.html
@@ -29,6 +29,7 @@
     <link rel="icon" type="image/gif" href="/doom.gif">
     <link rel="stylesheet" type="text/css" href="/$cssPath$">
     <link rel="alternate" type="application/rss+xml" href="/feed.xml" title="RSS feed">
+    <link rel="webmention" href="https://webmention.io/maxfii.github.io/webmention" />
   </head>
   <body>
     $partial("templates/header.html")$
