por fin! i command the store!

--- a/templates/post.html
+++ b/templates/post.html
@@ -11,4 +11,21 @@
     </div>
     $body$
   </article>
+    $if(likes)$
+        <p>likes</p>
+        <ul>
+            $for(likes)$
+            <li> $html$ <\li>
+            $endfor$
+        <\ul>
+    $endif$
+    $if(replies)$
+        <p>replies</p>
+        <ul>
+            $for(replies)$
+            <li> $html$ <\li>
+            $endfor$
+        <\ul>
+    $endif$
+
 </div>
