--- a/templates/default.html
+++ b/templates/default.html
@@ -36,6 +36,7 @@
     <div id="main">$body$</div>
     $partial("templates/footer.html")$
 
+    <a href="https://github.com/maxfii" rel="me authn">github.com/maxfii</a>
     <script type="text/javascript">
       [].slice.call(document.querySelectorAll('.footnote-ref sup')).forEach(function(el) {
         var content = el.innerText;
